--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 /public/build
 /public/hot
 # /public/storage
-# /storage/*.key
-# /vendor
+# /storage/**/*
+/vendor
 # .env
 .env.backup
 .env.production
